public/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  --font-inter-sans: 'Inter', sans-serif;
  --font-jetbrains-mono: 'JetBrains Mono', monospace;
  --font-noto-serif: 'Noto Serif Display', serif;

  --color-taupe-50: #fbfaf9;
  --color-taupe-100: #f3f1f1;
  --color-taupe-200: #e8e4e3;
  --color-taupe-300: #d8d2d0;
  --color-taupe-400: #aba09c;
  --color-taupe-500: #7c6d67;
  --color-taupe-600: #5b4f4b;
  --color-taupe-700: #473c39;
  --color-taupe-800: #2b2422;
  --color-taupe-900: #1d1816;
  --color-taupe-950: #0c0a09;

  --color-orange-50: #fff7ed;
  --color-orange-100: #ffedd5;
  --color-orange-200: #fed7aa;
  --color-orange-300: #fdba74;
  --color-orange-400: #fb923c;
  --color-orange-500: #f97316;
  --color-orange-600: #ea580c;
  --color-orange-700: #c2410c;
  --color-orange-800: #92400e;
  --color-orange-900: #7c2d12;
  --color-orange-950: #431407;
}

/* Reset / Base  */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;
}

body {
  font-family: var(--font-inter-sans);
  background-color: var(--color-taupe-950);
  color: var(--color-taupe-50);
  overflow-x: hidden;
}

a {
  color: inherit;
  text-decoration: inherit;
}

ul {
  list-style: none;
}

::selection {
  background-color: var(--color-orange-500);
  color: var(--color-taupe-900);
}

.mono {
  font-family: var(--font-jetbrains-mono);
}

.serif {
  font-family: var(--font-noto-serif);
}

.link {
  cursor: pointer;
  opacity: 0.75;
  transition: all ease-in 150ms;
  background: none;
  border: none;
  color: inherit;
  font-size: 1rem;
}

.link:hover,
.link:active {
  opacity: 1;
}

.button-ghost {
  border: none;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  cursor: pointer;
  opacity: 0.8;
  transition: all ease-in 150ms;
  padding: 0.7rem 1rem;
  border-radius: 9999px;
  background: none;
  color: inherit;
  font-size: 1rem;
}

.button-ghost i {
  font-size: 1.25rem;
  font-weight: 500;
}

.button-ghost:hover {
  opacity: 1;
  background-color: rgba(251, 250, 249, 0.05);
}

.button-outline {
  border: 1px solid var(--color-taupe-50);
  display: flex;
  align-items: center;
  gap: 0.5rem;
  cursor: pointer;
  opacity: 0.8;
  transition: opacity 150ms, background-color 150ms;
  padding: 0.7rem 1rem;
  border-radius: 9999px;
  background: none;
  color: inherit;
  font-size: 1rem;
}

.button-outline:hover {
  opacity: 1;
  background-color: rgba(251, 250, 249, 0.15);
}

/* Header */
.header {
  position: fixed;
  display: flex;
  width: 100%;
  align-items: center;
  z-index: 50;
  padding: 1rem;
  justify-content: space-around;
  background: linear-gradient(to bottom,
    rgba(12, 10, 9, 0.9) 0%,
    rgba(12, 10, 9, 0.5) 50%,
    transparent 100%);
}

.header-logo {
  color: var(--color-taupe-50);
  display: flex;
  align-items: center;
}

.header-logo p {
  font-size: 1.875rem;
  font-weight: 700;
}

.header-nav {
  display: flex;
  gap: 1.25rem;
}

/* Hero Section */
.hero-wrapper {
  width: 100dvw;
  height: 100dvh;
  position: relative;
  padding: 3rem;
  padding-top: 5rem;
}

.hero-wrapper::before {
  content: "";
  position: absolute;
  left: -6rem;
  top: 3rem;
  width: 20rem;
  height: 8rem;
  filter: blur(64px);
  background-color: rgba(249, 115, 22, 0.6);
  transform: rotate(45deg);
  pointer-events: none;
}

.hero-wrapper::after {
  content: "";
  position: absolute;
  right: -6rem;
  bottom: 3rem;
  width: 20rem;
  height: 8rem;
  filter: blur(64px);
  background-color: rgba(249, 115, 22, 0.6);
  transform: rotate(115deg);
  pointer-events: none;
}

.hero-section {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 1rem;
  border-radius: 0.75rem;
  overflow: hidden;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  position: relative;
  z-index: 1;
}

.hero-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.5;
  z-index: -1;
  background: center / cover url(./assets/images/hero-banner.jpg);
}

.hero-section h1 {
  font-size: 4.5rem;
  font-style: italic;
  font-weight: 800;
  margin: 0;
}

.hero-section .hero-subtitle {
  color: rgba(251, 250, 249, 0.5);
  font-size: 1.25rem;
  margin: 0;
}

.hero-buttons {
  display: flex;
  gap: 2.5rem;
}

/* Problem Section */
.section-problem {
  max-width: 80rem;
  min-height: 90dvh;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.section-problem h1 {
  font-size: 2.25rem;
  font-style: italic;
  font-weight: 700;
  max-width: 20rem;
  text-align: center;
  padding-bottom: 1.5rem;
  margin: 0;
}

.section-problem .row {
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: relative;
}

.glow-left {
  position: absolute;
  width: 10rem;
  height: 10rem;
  background-color: var(--color-orange-500);
  filter: blur(64px);
  z-index: -50;
  top: 2.5rem;
  left: 2.5rem;
  pointer-events: none;
}

.section-problem img {
  width: 24rem;
  border-radius: 9999px;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.section-problem .center-text {
  max-width: 20rem;
  text-align: center;
  color: var(--color-taupe-300);
  align-self: center;
  margin: 0;
}

.cards-column {
  display: flex;
  flex-direction: column;
  margin-top: auto;
  margin-bottom: auto;
  gap: 8rem;
}

.card-problem {
  padding: 1.5rem;
  background-color: rgba(251, 250, 249, 0.05);
  border-radius: 0.75rem;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  display: inline-flex;
  align-items: center;
  gap: 1rem;
  font-size: 1.125rem;
}

.card-problem i {
  color: var(--color-orange-400);
  font-size: 1.875rem;
  animation: pulse 2s ease-in-out infinite;
}

.card-offset {
  transform: translateX(-10rem);
}

@keyframes pulse {
  0%,
  100% {
    opacity: 1;
  }

  50% {
    opacity: 0.5;
  }
}

/* Solution Section  */
.section-solution {
  max-width: 80rem;
  min-height: 90dvh;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.section-solution>h1 {
  font-size: 2.25rem;
  font-style: italic;
  font-weight: 700;
  max-width: 28rem;
  text-align: center;
  margin: 0;
}

.section-solution>p {
  max-width: 20rem;
  text-align: center;
  color: var(--color-taupe-300);
  padding-bottom: 1rem;
  margin: 0;
}

.section-solution .row {
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: relative;
}

.cards-solution {
  display: flex;
  flex-direction: column;
  margin-top: auto;
  margin-bottom: auto;
  gap: 1rem;
}

.card-solution {
  padding: 1.5rem;
  background-color: rgba(251, 250, 249, 0.05);
  border-radius: 0.75rem;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.card-solution span {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.card-solution i {
  color: var(--color-orange-500);
  font-size: 1.875rem;
}

.card-solution h1 {
  font-size: 1.125rem;
  font-weight: 600;
  margin: 0;
}

.card-solution p {
  color: var(--color-taupe-300);
  margin: 0;
}

.section-solution img {
  width: 24rem;
  border-radius: 9999px;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.glow-right {
  position: absolute;
  width: 10rem;
  height: 10rem;
  background-color: var(--color-orange-500);
  filter: blur(64px);
  z-index: -50;
  bottom: 4rem;
  right: 2.5rem;
  pointer-events: none;
}

/* Dashboard Section */
.section-dashboard {
  max-width: 80rem;
  min-height: 90dvh;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-top: 2.5rem;
}

.section-dashboard h1 {
  font-size: 4.5rem;
  font-style: italic;
  font-weight: 800;
  text-align: center;
  margin: 0;
  background: linear-gradient(to top, var(--color-orange-500), rgba(249, 115, 22, 0.4), transparent);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  color: transparent;
}

.dashboard-frame {
  width: 100%;
  height: 80dvh;
  display: flex;
  justify-content: space-between;
  margin-top: -1.75rem;
}

.dashboard-placeholder {
  border: 1px solid var(--color-taupe-950);
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0.75rem;
  background-color: var(--color-taupe-900);
  font-size: 1.5rem;
  gap: 0.75rem;
}

/* Invite Section */
.section-invite {
  max-width: 56rem;
  min-height: 60dvh;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.invite-card {
  width: 100%;
  height: 24rem;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  position: relative;
  z-index: 1;
}

.invite-card::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 1;
  z-index: -1;
  filter: saturate(1.5);
  border-radius: 1rem;
  background: center / cover url(./assets/images/bottle-coins.png);
}

.invite-inner {
  backdrop-filter: blur(4px);
  background-color: rgba(12, 10, 9, 0.4);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2.5rem;
  border-radius: 0.5rem;
  gap: 1rem;
  box-shadow: 0 10px 15px -3px rgba(12, 10, 9, 0.5);
}

.invite-inner h1 {
  font-size: 1.875rem;
  font-style: italic;
  font-weight: 700;
  max-width: 28rem;
  text-align: center;
  margin: 0;
}

.invite-inner p {
  max-width: 20rem;
  text-align: center;
  color: var(--color-taupe-300);
  margin: 0;
}

/* Footer */
footer {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.25);
}

.footer-main {
  max-width: 80rem;
  margin-left: auto;
  margin-right: auto;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: var(--font-jetbrains-mono);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.footer-brand {
  color: var(--color-taupe-300);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  max-width: 24rem;
}

.footer-brand-logo {
  color: var(--color-taupe-50);
  display: flex;
  align-items: center;
}

.footer-brand-logo p {
  font-size: 1.875rem;
  font-weight: 700;
  margin: 0;
}

.footer-brand > p {
  font-size: 0.875rem;
  margin: 0;
}

.footer-credit {
  display: inline-flex;
  gap: 3px;
  font-size: 0.875rem;
  align-items: center;
  margin: 0;
}

.footer-credit i {
  font-size: 1.25rem;
  font-weight: 600;
  color: var(--color-orange-400);
}

.footer-credit a {
  font-weight: 600;
  color: var(--color-taupe-100);
  text-decoration: underline;
}

.footer-nav {
  color: var(--color-taupe-300);
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 24rem;
}

.footer-bottom {
  display: flex;
  border-top: 1px solid var(--color-taupe-900);
  justify-content: space-around;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: var(--color-taupe-300);
}

.footer-bottom p {
  margin: 0;
}

.footer-bottom a {
  font-weight: 600;
  color: var(--color-taupe-100);
  text-decoration: none;
}

.footer-bottom i {
  font-size: 1.875rem;
  font-weight: 500;
  display: flex;
  align-items: center;
}

